# podcast-brief

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: daily-briefing.yml
config/: agent_definition.json  daily_run_prompt.md  debug_run_prompt.md  deployed_ids.json  schedule.json  system_prompt.md
docs/: 00-README.md  01-architecture.md  02-notion-schemas.md  03-managed-agent-config.md  04-system-prompt.md  05-daily-run-prompt.md  06-code-modules.md  07-deployment.md  08-verification.md  09-future-extensions.md
scripts/: trigger_run.sh
src/podcast_brief/: fetch_rss.py  fetch_transcript.py  find_youtube_video.py  send_email.py
tests/: test_fetch_rss.py  test_fetch_transcript.py  test_send_email.py
