[project]
name = "podcast-brief"
version = "0.1.0"
description = "Personal podcast monitoring agent — daily briefings from curated podcasts, tuned to your interests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.34.2",
    "resend>=2.30.1",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
